fix(header): z-index

--- a/components/src/patterns/header/header.scss
+++ b/components/src/patterns/header/header.scss
@@ -45,6 +45,7 @@
   background-color: var(--sdds-blue-800);
   height: 64px;
   width: 100%;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
 }
